<resources>
    <string name="app_name">Covtect-19</string>
    <string name="welcome_message">Selamat datang di Covtect-19 Aplikasi ini dapat mendeteksi dini apakah Anda mengidap Covid-19</string>
    <string name="start_message">Klik Mulai untuk memulai tahap deteksi</string>
    <string name="start">Mulai</string>
    <string name="user_agreement">Persetujuan Pengguna</string>
    <string name="agreement_message">Aplikasi ini menyimpan dan menggunakan data pengguna seperti umur, jenis kelamin, serta suara Anda. Tapi Anda dapat mengajukan email menggunakan User ID untuk menghapus data suara Anda dari database kami. Apakah Anda setuju dengan syarat ini?</string>
    <string name="cancel">Batalkan</string>
    <string name="agree_and_continue">Setuju &amp; Lanjutkan</string>
    <string name="user_id">User ID</string>
    <string name="age">Umur</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="height">Tinggi Badan</string>
    <string name="weight">Berat Badan</string>
    <string name="enter_age">Masukkan Umur</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="enter_height">Masukkan Tinggi Badan</string>
    <string name="enter_weight">Masukkan Berat Badan</string>
    <string name="continue1">Lanjutkan</string>
    <string name="registration">Registrasi</string>
    <string name="symptoms">Gejala yang sedang dialami</string>
    <string name="personal_information">Informasi Diri</string>
    <string name="asthma">Asma</string>
    <string name="fever">Demam</string>
    <string name="short_breathed">Nafas Pendek</string>
    <string name="diarrhea">Diare</string>
    <string name="muscle_ache">Nyeri Otot</string>
    <string name="sore_throat">Sakit Tenggorokan</string>
    <string name="dizzy">Pusing</string>
    <string name="dry_cough">Batuk Kering</string>
    <string name="wet_cough">Batuk Basah</string>
    <string name="vertigo">Vertigo</string>
    <string name="tight_chest">Dada Sesak</string>
    <string name="record_cough_instruction">Pastikan tidak ada suara sekitar yang masuk Klik tombol ini lalu batuk tiga kali. Setelah selesai, klik tombol kembali</string>
    <string name="record_breath_instruction">Pastikan tidak ada suara sekitar yang masuk Klik tombol di bawah lalu hirup udara sekuat-kuatnya dan hembuskan sekuat-kuatnya Ulangi 5 kali Setelah selesai, klik tombol kembali</string>
    <string name="check_instruction">Tekan tombol ini untuk memeriksa suara Anda. Apabila terekam suara selain batuk (suara kendaraan, orang berbicara), maka klik lagi tombol diatas</string>
    <string name="send_instruction">Apabila suara telah bersih dari berbagai macam suara selain batuk, maka klik tombol kirim</string>
    <string name="send">Kirim</string>
    <string name="play_error">Mohon rekam suara terlebih dahulu</string>
    <string name="loading">Proses Diagnosis Sedang Berlangsung, Harap Tunggu</string>
    <string name="diagnose_result">Hasil Diagnosis</string>
    <string name="result">20% Mengidap Covid-19</string>
    <string name="back_to_home">Kembali ke Layar Utama</string>
    <string name="start_test_again">Mulai Tes Lagi</string>
    <string name="record_cough">Rekam Suara Batuk</string>

</resources>