<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".PersonalInformationActivity">

    <TextView
        android:id="@+id/tv_user_id"
        style="@style/TextFieldTitle"
        android:text="@string/user_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_user_id_hasil"
        style="@style/TextFieldTitle"
        tools:text="@string/user_id"
        app:layout_constraintTop_toBottomOf="@id/tv_user_id"
        app:layout_constraintStart_toStartOf="@id/tv_user_id"/>

    <TextView
        android:id="@+id/tv_age"
        style="@style/TextFieldTitle"
        android:text="@string/age"
        app:layout_constraintTop_toBottomOf="@id/tv_user_id_hasil"
        app:layout_constraintStart_toStartOf="@id/tv_user_id_hasil" />

    <TextView
        android:id="@+id/tv_age_hasil"
        style="@style/TextFieldTitle"
        tools:text="@string/age"
        app:layout_constraintTop_toBottomOf="@id/tv_age"
        app:layout_constraintStart_toStartOf="@id/tv_age"/>

    <TextView
        android:id="@+id/tv_gender"
        style="@style/TextFieldTitle"
        android:layout_marginTop="16dp"
        android:text="@string/gender"
        app:layout_constraintTop_toBottomOf="@id/tv_age_hasil"
        app:layout_constraintStart_toStartOf="@id/tv_age_hasil" />

    <TextView
        android:id="@+id/tv_gender_hasil"
        style="@style/TextFieldTitle"
        android:layout_marginTop="16dp"
        tools:text="@string/gender"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        app:layout_constraintStart_toStartOf="@id/tv_gender">
    </TextView>

    <TextView
        android:id="@+id/tv_height"
        style="@style/TextFieldTitle"
        android:text="@string/height"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_hasil"
        app:layout_constraintStart_toStartOf="@id/tv_gender_hasil" />

    <TextView
        android:id="@+id/tv_height_hasil"
        style="@style/TextFieldTitle"
        tools:text="@string/height"
        app:layout_constraintTop_toBottomOf="@id/tv_height"
        app:layout_constraintStart_toStartOf="@id/tv_height"/>

    <TextView
        android:id="@+id/tv_weight"
        style="@style/TextFieldTitle"
        android:text="@string/weight"
        app:layout_constraintTop_toBottomOf="@id/tv_height_hasil"
        app:layout_constraintStart_toStartOf="@id/tv_height_hasil" />

    <TextView
        android:id="@+id/tv_weight_hasil"
        style="@style/TextFieldTitle"
        tools:text="@string/weight"
        app:layout_constraintTop_toBottomOf="@id/tv_weight"
        app:layout_constraintStart_toStartOf="@id/tv_weight"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_marginStart="16dp"
        android:text="@string/continue1"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>