<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="60dp"
    tools:context=".ResultFragment">

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diagnose_result"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintVertical_bias="0.269"
        app:layout_constraintVertical_bias="0.374"/>

    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loading"
        tools:visibility = "gone"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/result"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_loading"
        tools:visibility = "visible"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_start"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_test_again"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_back"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>