<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".RecordBreathFragment">

    <TextView
        android:id="@+id/tv_record_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_breath_instruction"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <ImageButton
        android:id="@+id/ib_record"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_mic_white_24"
        android:background="@drawable/ic_baseline_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_record_instruction" />

    <TextView
        android:id="@+id/tv_check_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/check_instruction"
        app:layout_constraintTop_toBottomOf="@id/ib_record"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ib_play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:padding="25dp"
        android:background="@drawable/ic_baseline_circle_24"
        android:src="@drawable/ic_play_arrow_white_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_check_instruction" />

    <TextView
        android:id="@+id/tv_send_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/send_instruction"
        app:layout_constraintTop_toBottomOf="@id/ib_play"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_kirim"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_send_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>